# rusec

./: .gitignore
agent/main/: Cargo.toml
agent/main/src/: main.rs
agent/metrics/: Cargo.toml
agent/metrics/src/: cpu.rs  disk.rs  lib.rs  memory.rs  network.rs  system.rs
backend/: README.md  docker-compose.dev.yml
backend/agent_api/: Cargo.toml
backend/agent_api/src/: lib.rs
backend/database/: Cargo.toml
backend/database/migrations/: 20231020131229_create_agents_table.down.sql  20231020131229_create_agents_table.up.sql
backend/database/src/: lib.rs
backend/database/src/agent/: mod.rs
backend/db/: Cargo.toml
backend/db/migrations/2023-11-02-065435_create_agent_table/: up.sql
backend/db/migrations/2023-11-02-065533_create_metric_eva/: down.sql  up.sql
backend/db/src/: schema.rs
backend/db/src/models/: agents.rs  metric_categories.rs  metric_readings.rs  metric_sensors.rs  metric_types.rs  mod.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/server/src/api/: agents.rs  metrics.rs  mod.rs
