[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0.189", features = ["derive"] }
uuid = { version = "1.5.0" }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "ipnetwork",
    "json",
] }
tokio = { version = "1.0", features = ["full"] }
