[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "extras"] }
dotenvy = "0.15"
rust_decimal = { version = "1.32.0", features = ["db-diesel2-postgres"] }
uuid = { version = "1.5", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
serde_json = "1.0"
