[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.107"
database = { path = "../database" }
agent_api = { path = "../agent_api" }
